--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\racha\\anaconda3\\envs\\rasainstall\\python.exe"
+    "python.pythonPath": "C:\\Users\\racha\\anaconda3\\envs\\installingrasa\\python.exe"
 }
