--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = C:\Users\racha\AppData\Local\Programs\Python\Python37
+home = c:\users\racha\anaconda3
+implementation = CPython
+version_info = 3.7.6.final.0
+virtualenv = 20.0.35
 include-system-site-packages = false
-version = 3.7.2
+base-prefix = c:\users\racha\anaconda3
+base-exec-prefix = c:\users\racha\anaconda3
+base-executable = c:\users\racha\anaconda3\python.exe
